Closed Bug 1016150 Opened 11 years ago Closed 11 years ago

Crash with new MP4 demuxer on HD video

Categories

(Core :: Audio/Video, defect)

29 Branch
x86_64
Windows 8.1
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla32

People

(Reporter: cpearce, Assigned: ajones)

Details

Attachments

(2 files, 1 obsolete file)

STR: 1. On Windows 8.1 x64, make sure Nightly is up to date. 2. Pref on new demuxer, media.fragmented-mp4.exposed = true 3. Load http://people.mozilla.org/~cpearce/video/facebook-paper.mp4 4. CRASH
Summary: Crash with new demuxer on HD video → Crash with new MP4 demuxer on HD video
Assignee: nobody → ajones
Attachment #8430479 - Attachment is obsolete: true
Attachment #8430482 - Flags: review?(cpearce)
Comment on attachment 8429756 [details] [diff] [review] Fix ffmpeg Review of attachment 8429756 [details] [diff] [review]: ----------------------------------------------------------------- D'oh.
Attachment #8429756 - Flags: review?(edwin) → review+
Comment on attachment 8430482 [details] [diff] [review] Fix Windows date assert in libstagefright demuxer Review of attachment 8430482 [details] [diff] [review]: ----------------------------------------------------------------- ::: media/libstagefright/frameworks/av/media/libstagefright/MPEG4Extractor.cpp @@ +727,5 @@ > static void convertTimeToDate(int64_t time_1904, String8 *s) { > time_t time_1970 = time_1904 - (((66 * 365 + 17) * 24) * 3600); > > + if (time_1970 < 0) { > + s->clear(); Indentation.
Attachment #8430482 - Flags: review?(cpearce) → review+
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla33
Target Milestone: mozilla33 → mozilla32
QA Whiteboard: [good first verify]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: