Bug 1016150 - Fix Windows date assert in libstagefright demuxer; r=cpearce